src/assets/App.css
body {
  background-color: rgba(244, 240, 240, 0.91);
  color: var(--text-colour)
}

:root {
  --background-colour: # ;
  --primary-colour: #669AB3;
  --secondary-colour: #FFD1C4;
  --tertiary-colour: # ;
  --text-colour: # ;
}

#header {
  background-color: var(--primary-colour)
}

h1 {
  color: var(--text-colour)
}

button[type = submit], button[type = button] {
  background-color: var(--secondary-colour)
}

.carousel.slide {
  background-color: var(--tertiary-colour);
  opacity: 80%;
}

.carousel-item {
  background-color: #ABE4FF;
}

button.btn{
  border: 0;
}

#displayQuote {
  background-color: #ABE4FF;
  border-radius: 10px;
}

